# BitFun

./: .gitignore  AGENTS-CN.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
BitFun-Installer/: README.md  package-lock.json  package.json
BitFun-Installer/src-tauri/: Cargo.toml
BitFun-Installer/src/pages/: LanguageSelect.tsx
docs/architecture/: agent-runtime-services-design.md  core-decomposition.md  i18n.md
docs/development/: i18n.md
docs/plans/: core-decomposition-completed.md  core-decomposition-plan.md
docs/superpowers/plans/: 2026-06-01-external-app-module.md  2026-06-02-external-app-lifecycle-skills-plan.md
docs/superpowers/specs/: 2026-06-01-external-app-module-design.md  2026-06-02-external-app-lifecycle-skills-design.md
external-apps/demo-app/: .gitignore  index.html  package.json  vite.config.ts
external-apps/demo-app/public/: manifest.json  sw.js
scripts/: check-core-boundaries.mjs  check-repo-hygiene.mjs  generate-i18n-contract.mjs  i18n-audit.mjs  i18n-contract.test.mjs  i18n-governance-baseline.json
scripts/core-boundaries/: checker.mjs  self-test.mjs
src/apps/relay-server/: Cargo.toml
src/apps/relay-server/static/homepage/: i18n.json  i18n.shared.json  index.html
src/crates/agent-runtime/: AGENTS.md  Cargo.toml
src/crates/agent-runtime/src/: lib.rs  scheduler.rs  thread_goal.rs
src/crates/agent-runtime/tests/: scheduler_contracts.rs  thread_goal_contracts.rs
src/mobile-web/: package-lock.json  package.json
src/web-ui/: package.json
src/web-ui/src/: main.tsx
(+296 files in other folders)
